--- a/src/index.css
+++ b/src/index.css
@@ -35,8 +35,12 @@ button {
   transition: all .15s ease-in-out;
 }
 
+button:disabled {
+  opacity: .5;
+}
+
 /* global input style */
-.form-control {
+.form-control, .choose-file-label {
   display: block;
   padding: 0.575rem 0.75rem;
   font-size: 1rem;
@@ -52,6 +56,28 @@ button {
   border-radius: 0.375rem;
   transition: all .15s ease-in-out;
   width: 100%;
+}
+
+.choose-file-label {
+  width: 100% !important;
+  text-align: left !important;
+  position: relative;
+  height: 25px;
+  overflow: hidden;
+  cursor: pointer;
+  transform: none !important;
+}
+
+.choose-file-label span {
+  position: absolute;
+  /* background: #F0F2F8; */
+  top: 0;
+  left: 0;
+  height: 100%;
+  padding: 10px;
+  /* border-right-width: 2px;
+  border-right-color: #ced4da;
+  border-right-style: solid; */
 }
 
 /* input group style */
@@ -89,4 +115,60 @@ button {
   border-radius: 0.375rem;
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
+}
+
+.input-group-customer .input-group {
+  align-items: flex-start;
+}
+
+.input-group-customer .input-group label {
+  color: #555;
+  width: 30%;
+  text-align: right;
+  transform: translateY(15px);
+}
+
+.input-group-customer .input-group .form-control-wrap {
+  width: 60%;
+  margin-left: 20px;
+}
+
+.input-group-customer .input-group .form-control-wrap.radio {
+  display: flex;
+  flex-direction: column;
+  transform: translateY(-10px);
+}
+
+.input-group-customer .input-group .form-control-wrap.radio label {
+  text-align: left;
+  margin-bottom: 5px;
+}
+
+.input-group-customer .input-group .form-control {
+  border-radius: 0.375rem;
+}
+
+.error-text {
+  display: block;
+  width: 100%;
+  margin-top: 0.25rem;
+  font-size: .875em;
+  color: #dc3545;
+  text-align: left;
+}
+
+.nrc-wrap .nrc-code {
+  display: flex;
+  margin-left: 20px;
+  width: 100%;
+}
+
+.nrc-wrap .nrc-code .form-control-wrap {
+  margin-left: 0 !important;
+}
+
+/* table responsive */
+.table-responsive {
+  width: 100%;
+  overflow-x: auto;
 }
