--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  background: #EEF1F7;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -33,6 +34,38 @@ button {
   user-select: none;
   border-radius: 0.375rem;
   transition: all .15s ease-in-out;
+  margin-right: 5px;
+  margin-bottom: 5px;
+  min-width: 65px;
+}
+
+button.edit {
+  color: #FFF;
+  border: 1px solid #0dcaf0;
+  background: #0dcaf0;
+}
+
+button.sm {
+  padding: 0.175rem 0.5rem;
+  border-radius: 0;
+}
+
+button.delete {
+  color: #FFF;
+  border: 1px solid #dc3545;
+  background: #dc3545;
+}
+
+button.primary {
+  color: #FFF;
+  border: 1px solid #4F46E5;
+  background: #4F46E5;
+}
+
+button.secondary {
+  color: #FFF;
+  border: 1px solid #E0E7FF;
+  background: #E0E7FF;
 }
 
 button:disabled {
@@ -167,8 +200,71 @@ button:disabled {
   margin-left: 0 !important;
 }
 
+/* input group media query */
+@media (max-width: 1199px) {
+  .input-group {
+    flex-direction: column;
+  }
+  .input-group-customer .input-group label {
+    width: 100%;
+    text-align: left;
+    transform: none;
+  }
+  .input-group-customer .input-group .form-control-wrap {
+    width: 90%;
+    margin-left: 0px;
+  }
+  .nrc-wrap {
+    flex-direction: column;
+  }
+  .nrc-wrap .nrc-code {
+    margin-left: 0px;
+  }
+  .input-group-customer .input-group .form-control-wrap.radio {
+    display: flex;
+    flex-direction: row;
+    transform: none;
+    margin-top: 10px;
+  }
+}
+
+
 /* table responsive */
 .table-responsive {
   width: 100%;
   overflow-x: auto;
+}
+
+.table-responsive table {
+  clear: both;
+  margin-top: 6px !important;
+  margin-bottom: 6px !important;
+  max-width: none !important;
+  border-collapse: separate !important;
+  border-spacing: 0;
+  border-right-width: 0;
+  width: 100%;
+  border: 1px solid #dee2e6;
+}
+
+.table-responsive thead {
+  border-collapse: separate !important;
+  border-spacing: 0;
+  background: #F0F2F8;
+}
+
+.table-responsive thead tr th {
+  padding: 0.75rem;
+  text-transform: uppercase;
+  font-size: 14px;
+}
+
+.table-responsive tbody tr {
+  background-color: transparent;
+}
+
+.table-responsive tbody td {
+  padding: 0.75rem;
+  font-size: 13px;
+  color: #666;
 }
