--- a/src/index.css
+++ b/src/index.css
@@ -91,6 +91,10 @@ button:disabled {
   width: 100%;
 }
 
+.react-datepicker-wrapper .form-control {
+  width: initial;
+}
+
 .choose-file-label {
   width: 100% !important;
   text-align: left !important;
@@ -126,7 +130,7 @@ button:disabled {
 .input-group > .form-control {
   position: relative;
   flex: 1 1 auto;
-  width: 1%;
+  /* width: 1%; */
   min-width: 0;
   margin-left: -1px;
   border-top-left-radius: 0;
@@ -267,4 +271,55 @@ button:disabled {
   padding: 0.75rem;
   font-size: 13px;
   color: #666;
+}
+
+/* data table style */
+.TUEFO {
+  padding: 0 !important;
+}
+
+.rdt_TableHeadRow {
+  background-color: #F0F2F8 !important;
+}
+
+.rdt_TableCol {
+  padding: 0.75rem;
+  text-transform: uppercase;
+  font-size: 14px;
+  padding-left: 5px !important;
+  padding-right: 5px !important;
+}
+
+.rdt_TableCell {
+  padding-left: 5px !important;
+  padding-right: 5px !important;
+}
+
+/* date filter style */
+.date {
+  display: flex;
+  align-items: baseline;
+  margin-bottom: 30px;
+}
+
+.date-input-wrap {
+  display: flex;
+}
+
+.date-btn {
+  margin-left: 10px;
+}
+
+/* input group media query */
+@media (max-width: 1199px) {
+  .date {
+    flex-direction: column;
+  }
+  .date-input-wrap {
+    flex-direction: column;
+  }
+  .date-btn {
+    margin: 0;
+    margin-top: 10px;
+  }
 }
